--- a/mastra-first-agent/package.json
+++ b/mastra-first-agent/package.json
@@ -17,12 +17,14 @@
     "node": ">=22.13.0"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.28",
     "@mastra/core": "^1.4.0",
     "@mastra/evals": "^1.1.1",
     "@mastra/libsql": "^1.4.0",
     "@mastra/loggers": "^1.0.1",
     "@mastra/memory": "^1.3.0",
     "@mastra/observability": "^1.2.0",
+    "@mastra/openai": "^1.0.1-alpha.48",
     "zod": "^4.3.6"
   },
   "devDependencies": {
