--- a/mastra-first-agent/package.json
+++ b/mastra-first-agent/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "mastra dev",
     "build": "mastra build",
-    "start": "mastra start"
+    "start": "mastra start",
+    "run:workflow": "tsx src/run-workflow.ts"
   },
   "keywords": [],
   "author": "",
@@ -25,11 +26,13 @@
     "@mastra/memory": "^1.3.0",
     "@mastra/observability": "^1.2.0",
     "@mastra/openai": "^1.0.1-alpha.48",
+    "dotenv": "^16.4.7",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^25.2.3",
     "mastra": "^1.3.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.9.3"
   }
 }
